--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: TeslaMateAgile
-url: https://github.com/MattJeanes/TeslaMateAgile
-maintainer: Matt Jeanes <mattjeanes23@gmail.com>
+url: https://github.com/tougher/hassio-addon-TeslaMateAgile
+maintainer: Christoffer Hoel <christoffer@hoel.dk>
